# stb-reader

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  authentication.md  library.md  live-tv.md  vod-series.md
docs/guide/: api-reference.md  authentication.md  cli.md  error-handling.md  getting-started.md  live-tv.md  pagination.md  series.md  vod.md
docs/protocol/: vod-series.md
server/: config.py  db.py  main.py  sync.py  vod_sync.py
server/routes/: _helpers.py  library.py  live_tv.py  proxy.py  vod.py  xtream.py
server/static/: index.html
spec/001-filter-adult-categories/: 001-filter-adult-categories-plan.md
spec/001-stb-api-server/: 001-stb-api-server-implement.md  001-stb-api-server-plan.md  001-stb-api-server-requirements.md
spec/002-search-vod-endpoint/: 002-search-vod-endpoint-implement.md  002-search-vod-endpoint-plan.md  002-search-vod-endpoint-requirements.md
spec/003-episode-quality-levels/: 003-episode-quality-levels-plan.md  003-episode-quality-levels-requirements.md
spec/005-strm-generator/: 005-strm-generator-implement.md  (+2 more)
stb_reader/: __init__.py  _http.py  auth.py  client.py  exceptions.py  live_tv.py  models.py  vod.py
tests/: conftest.py  test_auth.py  test_cli_config.py  test_cli_formatting.py  test_cli_live.py  test_cli_vod.py  test_http.py  test_library_db.py  test_library_routes.py  test_library_sync.py  test_live_tv.py  test_server.py  test_vod.py  test_vod_sync.py  test_xtream.py
(+39 files in other folders)
