[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stb-reader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.optional-dependencies]
server = ["fastapi", "uvicorn[standard]", "pydantic-settings", "httpx[http2]", "cachetools"]
test = ["pytest", "responses", "httpx", "pytest-cov"]
