[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stb-reader"
version = "0.1.0"
description = "Python client library for Ministra/Stalker STB portals"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "shubhsheth" }]
requires-python = ">=3.11"
dependencies = ["requests", "click"]
keywords = ["stb", "stalker", "ministra", "iptv", "portal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]

[project.scripts]
stb = "stb_reader.cli:main"

[project.urls]
Homepage = "https://github.com/shubhsheth/stb-reader"
Repository = "https://github.com/shubhsheth/stb-reader"

[project.optional-dependencies]
test = ["pytest", "responses", "httpx", "pytest-cov", "twine"]
